Update: Added Phase 2 Algorithm Architecture and unlocked module

--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
                 <button class="btn-primary">START MODULE</button>
             </div>
 
-            <!-- Future Phases: Locked -->
-            <div class="module-card locked">
+            <!-- Phase 2: Active -->
+            <div id="card-2" class="module-card" onclick="loadModule(2)">
                 <div class="module-info">
                     <span class="module-num">PHASE 02</span>
                     <h3>Algorithm Architecture</h3>
-                    <p>Locked until Phase 01 complete.</p>
+                    <p>Master the 5 pillars that build an 800+ score.</p>
                 </div>
-                <div class="lock-icon">🔒</div>
+                <div class="progress-bar"><div class="fill" style="width: 0%"></div></div>
+                <button class="btn-primary">START MODULE</button>
             </div>
 
             <div class="module-card locked">
