Update: Added Phase 3 Wealth Habits and unlocked module

--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
                 <button class="btn-primary">START MODULE</button>
             </div>
 
-            <div class="module-card locked">
+            <!-- Phase 3: Active -->
+            <div id="card-3" class="module-card" onclick="loadModule(3)">
                 <div class="module-info">
                     <span class="module-num">PHASE 03</span>
                     <h3>Wealth Habits</h3>
-                    <p>Locked until Phase 02 complete.</p>
+                    <p>Transition from credit repair to wealth leverage.</p>
                 </div>
-                <div class="lock-icon">🔒</div>
+                <div class="progress-bar"><div class="fill" style="width: 0%"></div></div>
+                <button class="btn-primary">START MODULE</button>
             </div>
 
             <div class="module-card locked">
