Update: Completed Phase 4 Mastery and unlocked final module

--- a/index.html
+++ b/index.html
@@ -62,13 +62,15 @@
                 <button class="btn-primary">START MODULE</button>
             </div>
 
-            <div class="module-card locked">
+            <!-- Phase 4: Active -->
+            <div id="card-4" class="module-card" onclick="loadModule(4)">
                 <div class="module-info">
                     <span class="module-num">PHASE 04</span>
                     <h3>Mastery & Leverage</h3>
-                    <p>Locked until Phase 03 complete.</p>
+                    <p>Unlock elite funding and protect your legacy.</p>
                 </div>
-                <div class="lock-icon">🔒</div>
+                <div class="progress-bar"><div class="fill" style="width: 0%"></div></div>
+                <button class="btn-primary">START MODULE</button>
             </div>
         </section>
 
